# Halad-alk-prog

./: README.md
Double Pendulum/: CMakeLists.txt  README.md  main.cpp  miniwindow.h
double pendulum/: README.md  pendulum.h  rk4.h
double pendulum/with simulation?/: CMakeLists.txt  README.md  main.cpp  miniwindow.h  newpendulum.cbp  rungekutta.h
double pendulum/without simulation/: README.md  newpendulum.cpp  rk4.h
hazi1/: Compiler Explorer C++ Editor #[object Object] Code (1).cpp  Compiler Explorer C++ Editor #[object Object] Code (2).cpp  Compiler Explorer C++ Editor #[object Object] Code.cpp  Newton iterator  h  trapéz integrator  trapéz integrator kommentnélkül
hazi4/: main.cpp  templatevector2.h
házi1/: integrator.cpp  integrator2.cpp  integrator22.cpp  newton.cpp
házi2/: Newton iterátor típusparaméterekkel  template.cpp
házi3/: linill3.cpp  main.cpp
házi4/: templatevcetor.cpp  templatevector2.cpp
házi5/: CMakeLists.txt  main.cpp  matrix.h
házi6/: main.cpp
kutinfo/: CMakeLists.txt  README.md  doublependulum.tex  main.cpp  rungekutta.h
szorgalmi/Cronway szimulatio/: CMakeLists.txt  README.md  main.cpp  miniwindow.h
